Fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,12 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+ #canvas1 {
+    background: transparent;
+    position: absolute;
 }
 
 
@@ -65,9 +71,10 @@ section h2 {
 .center {
     position: absolute;
     padding: 10px 0;
-    transform: translateX(1.5vh);
+    transform: translateX(4vh);
     
 }
+
 
 body {
     
